# spectral-pufs

./: README.md  Unclonix-3.ipynb  Unclonix-copy.ipynb  Unclonix.ipynb  pyproject.toml
inputs/: 6_1.txt  6_2.txt  6_3.txt  6_4.txt  7_1.txt  7_2.txt  7_3.txt  7_4.txt  7_5.txt  7_6.txt  8_1.txt  8_2.txt  8_3.txt  8_4.txt  8_5.txt
